
-More reliable page zooming / resizing

-Added Bitcoin NFT tracking support

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.25:

-BUG FIX: Miscellaneous fixes

-More efficient regular updating of price charts FOR THROTTLED / RATE-LIMITED APIs (Alphavantage stocks, etc)

-Upgraded to Jupiter Aggregator's v4 price API, allowing efficient API calls for multiple token prices

-Added styling, so printing out the portfolio page automatically looks good / fits on printer paper

-Updated the DEMO asset markets / news feeds

-Miscellaneous user experience improvements

-Code optimization / cleanup

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.26:

-BUG FIX: Fixed setting 'interface_login' in the Admin SECURITY Config (an issue in Windows 10 / 11 only...it now works when entering your login)

-BUG FIX: Fixed chart storage / price alerts from crashing, when a market has no trade volume data available (sorry!)

-BUG FIX: Miscellaneous fixes

-Added OPTIONAL Two-Factor Security feature for admin area (Google Authenticator / Microsoft Authenticator, Authy, etc)

-Developer-friendly global app vars / config / arrays / class functions, all stored inside the new array "$ct"

-User experience on daily background tasks (should no longer 'creep' up / down for time-of-day run)

-Added 'ALTNFTS' asset, for tracking alternate NFTs in a user's selected currency

-Updated the DEMO asset markets / news feeds

-Miscellaneous user experience improvements

-Code optimization / cleanup

IMPORTANT *UPGRADE* NOTICE:

v6.00.26 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------








