@@ -12,6 +12,7 @@
 // Adjust CSS for LINUX PHPDESKTOP or ALL OTHER browsers
 if ( $ct['app_container'] == 'phpdesktop' ) {
 $ct['dev']['small_font_size_css_selector'] .= $ct['dev']['small_font_size_css_selector_adjusted'];
+$ct['dev']['tiny_font_size_css_selector'] .= $ct['dev']['tiny_font_size_css_selector_adjusted'];
 }
 else {
 $ct['dev']['font_size_css_selector'] .= $ct['dev']['small_font_size_css_selector_adjusted'];
